--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "crud-generator-nuxt3-nestjs",
+  "version": "1.0.1",
+  "description": "A CRUD generator tool with Nuxt3 and Nestjs",
+  "main": "plopfile.js",
+  "author": "Ginz",
+  "license": "MIT",
   "devDependencies": {
     "fs-extra": "^11.3.0",
     "glob": "^11.0.3",
