--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,12 @@ node_modules
 !plopfile.js
 !.gitignore
 !README.md
-!frontend
-!backend
+!frontend/src/*
+!frontend/index.html
+!frontend/package.json
+!frontend/postcss.config.js
+!frontend/tailwind.config.js
+!backend/index.js
+!backend/package.json
 frontend/node_modules
 backend/node_modules
