--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,13 @@ node_modules
 !plopfile.js
 !.gitignore
 !README.md
-!frontend/src/*
-!frontend/index.html
-!frontend/package.json
-!frontend/postcss.config.js
-!frontend/tailwind.config.js
-!backend/index.js
-!backend/package.json
+
+!frontend/
+!frontend/**
+frontend/package-lock.json
 frontend/node_modules
+
+!backend/
+!backend/**
 backend/node_modules
+backend/package-lock.json
